--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!--Fontawesome-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13Wn6s4oVyhPsv7mA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+
+  <!--PAYPAL-->
+  <script src="https://www.paypal.com/sdk/js?client-id=AYNVihwij8YZoFPWrRfNfovI1R3Y9iVVAqxoHOXeGoqXUBTp8_kRM3cKfBlf6lE8G0TjsPOD9FWS6FI6&currency=USD"></script>
+
 
   <!--FUENTES-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
